--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
         <title>TheEnd.Page</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-        <link rel="icon" href="{{ url_for('static', filename='./app/static/Logo.ico') }}" type="image/x-icon">
+        <link rel="icon" href="{{ url_for('static', filename='Logo.ico') }}" type="image/x-icon">
 
         <!-- <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans+Hebrew&display=swap" rel="stylesheet"> -->
         <link href="https://fonts.googleapis.com/css2?family=Tagesschrift&display=swap" rel="stylesheet">
