--- a/app/templates/view.html
+++ b/app/templates/view.html
@@ -7,6 +7,7 @@
         <title>Page Partagée - TheEnd.page</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+        <link rel="icon" href="{{ url_for('static', filename='Logo.ico') }}" type="image/x-icon">
         <style>
             /* Styles spécifiques pour la vue partagée */
             .shared-page {
