last last last push

--- a/app/templates/editeur.html
+++ b/app/templates/editeur.html
@@ -30,6 +30,11 @@
                 <h2>Créez votre page</h2>
                 <div class="editor-container">
                     <div class="editor-sidebar">
+                    <h3>Titre</h3>
+                        <div class="page-title-container">
+                            <input type="text" id="page-title" class="page-title-input"
+                                placeholder="Titre de votre page">
+                        </div>
                         <h3>Éléments</h3>
                         <div class="elements-container">
                             <div class="element" draggable="true" data-type="heading">
