--- a/app/templates/editeur.html
+++ b/app/templates/editeur.html
@@ -122,7 +122,7 @@
                             </div>
                             <div class="element" draggable="true" data-type="image">
                                 <i class="fas fa-image"></i>
-                                <span>Image</span>
+                                <span>Image/GIF</span>
                             </div>
                             <div class="element" draggable="true" data-type="button">
                                 <i class="fas fa-square"></i>
@@ -132,10 +132,7 @@
                                 <i class="fas fa-video"></i>
                                 <span>Vidéo</span>
                             </div>
-                            <div class="element" draggable="true" data-type="gif">
-                                <i class="fas fa-film"></i>
-                                <span>GIF</span>
-                            </div>
+
                         </div>
 
                         <!-- Galerie de blocs -->
