--- a/app/templates/editeur.html
+++ b/app/templates/editeur.html
@@ -267,24 +267,9 @@
                     <button id="copy-link-btn"><i class="fas fa-copy"></i></button>
                 </div>
                 <div class="social-share">
-                    <!-- Facebook -->
-                    <a href="https://www.facebook.com/votrePage" target="_blank" rel="noopener noreferrer">
-                        <button class="social-btn facebook">
-                            <i class="fab fa-facebook-f"></i>
-                        </button>
-                    </a>
-                    
-                    <!-- Twitter -->
-                    <a href="https://twitter.com/votreCompte" target="_blank" rel="noopener noreferrer">
-                        <button class="social-btn twitter">
-                            <i class="fab fa-twitter"></i>
-                        </button>
-                    </a>
-                    
-                    <!-- WhatsApp -->
-                    <a href="https://www.whatsapp.com/" target="_blank" rel="noopener noreferrer">
-                        <button class="social-btn whatsapp">
-                            <i class="fab fa-whatsapp"></i>
+                    <button class="social-btn facebook"><i class="fab fa-facebook-f"></i></button>
+                    <button class="social-btn twitter"><i class="fab fa-twitter"></i></button>
+                    <button class="social-btn whatsapp"><i class="fab fa-whatsapp"></i></button>
                 </div>
             </div>
         </div>
